--- a/stats/styles.css
+++ b/stats/styles.css
@@ -104,14 +104,14 @@
             margin-bottom: 5px;
         }
 
-        strong {
-            font-weight: bold;
-            color: #27ae60;
+        em {
+            font-weight: italic;
+            color: #04AB0A;
         }
 
-        em {
-            font-style: italic;
-            color: #e74c3c;
+        strong {
+            font-style: bold;
+            color: #DF0DB7;
         }
 
         footer {
