--- a/stats/styles.css
+++ b/stats/styles.css
@@ -62,7 +62,7 @@
             display: block;
         }
 
-        .icons a {
+        .icons {
             color: #f8c471;
             margin-left: 10px;
             font-size: 24px;
