--- a/stats/styles.css
+++ b/stats/styles.css
@@ -50,7 +50,7 @@
 
         .dropdown-content a {
             color: white;
-            padding: 10px 10px;
+            padding: 10px;
             display: block;
         }
 
